# HabitLLMs

./: .gitignore  CMD_FLAGS.txt  Makefile  README.md  environment.yml  pyproject.toml  requirements_dev.txt
.devcontainer/: Dockerfile  devcontainer.json
docker/: .dockerignore  .env.example  docker-compose.yml  webui-compose.override.yml
habitllm/: __init__.py  config.json  parameters.py  requirements.txt  routine_handler.py  script.py  utils.py
habitllm/inference_specific_context_system/: __init__.py  data_handler.py
habitllm/model_persistent_context_system/: __init__.py  model_persistent_context.py
