[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "habitllm"
description = "Repo for habitllm system. Continuous learning with memory of interactions and meta-optimized learning."
authors = [{name = "James Riddell", email = "james.riddell1@gmail.com"}, {name = "Evelien Riddell", email = "evelienriddell@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies", "readme"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/jamesRiddell1/HabitLLMs"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "habitllm.__version__"}
dependencies = {file = ["habitllm/requirements.txt"]}
optional-dependencies = { dev = {file = ["habitllm/requirements_dev.txt"]} }
